--- a/src/App.css
+++ b/src/App.css
@@ -36,11 +36,20 @@
   display: inline-block;
   padding-right: 10px;
   padding-left: 10px;
+  max-width: 300px;
+  max-height: 450px;
+
+
 }
 
 .movies img, .noImage {
   width: 300px;
   height: 450px;
+}
+p {
+}
+.noImage {
+  background-color: lightgray;
 }
 a,
 .fa-search {
